# log-analyzer-with-ui

./: .gitignore  LICENSE  README.md  analyse.py  convert.py  cursDialog.py  main_app.py  pyproject.toml  requirements.txt  restart.sh  visualise.py
console/: consoleConvert.py  console_analyse.py  console_convert.py  console_logger.py  console_visualise.py  cursDialog.py  evtx_dump.py  main_app.py
console_app/: console_convert.py  cursDialog.py  evtx_dump.py
log_examples/analyse/: analyse_log_05_Jan_2020_13_20_45-EXAMPLE.txt  analyse_script_user_feedback_when_script_is_running-EXAMPLE.txt
log_examples/convert/: convert_log_05_Jan_2020_12_54_50-EXAMPLE.txt  convert_script_user_feedback_when_script_is_running-EXAMPLE.txt
log_examples/visualise/: visdata_log_05_Jan_2020_13_26_58-EXAMPLE.txt  visualise_script_user_feedback_when_script_is_running-EXAMPLE.txt
manual_scripts/: analyse.py  convert.py
